# autoclicker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  Makefile  PERFORMANCE.md  README.md  SECURITY.md  autoclicker.py  autoclicker_settings.example.json  autoclicker_settings.json  create_icon.py  launch_autoclicker.py  pyproject.toml  requirements-lock.txt  requirements.txt  run_autoclicker.bat  run_tests.py  start_autoclicker.py  tasks.bat  test_autoclicker.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
audit/: HARDENING_SUMMARY.md  PRE_AUDIT_NOTES.md  baseline_coverage.txt  baseline_env.txt  baseline_pip_freeze.snapshot  baseline_pip_freeze.txt  baseline_pytest.txt  baseline_run_tests.txt  baseline_smoke.txt  post_hardening_check.txt
audit/baseline_htmlcov/: class_index.html  function_index.html  index.html  status.json  z_121eab1b23a2c608___init___py.html  z_121eab1b23a2c608_coordinate_picker_py.html  z_5721f470d0d55b51___init___py.html  z_5721f470d0d55b51_main_py.html  z_68d8b42f3a8f8466___init___py.html  z_68d8b42f3a8f8466_click_engine_py.html  z_68d8b42f3a8f8466_exceptions_py.html  z_68d8b42f3a8f8466_settings_manager_py.html  z_81ee7d16ac00cf41___init___py.html  z_81ee7d16ac00cf41_main_window_py.html
audit/perf/: after.txt
autoclicker/: __init__.py  main.py
autoclicker/app/: __init__.py  controller.py  hotkeys.py  tray.py
autoclicker/core/: __init__.py  click_engine.py  exceptions.py  safety.py  session_log.py  settings_manager.py  settings_paths.py
autoclicker/gui/: __init__.py  main_window.py
autoclicker/gui/sections/: __init__.py  advanced.py  click_settings.py  collapsible.py  control.py  coordinates.py  disclaimer.py  status.py  title.py
autoclicker/utils/: __init__.py  coordinate_picker.py
docs/: ARCHITECTURE.md  PERFORMANCE.md
scripts/: profile_click_engine.py  smoke_check.py  soak_click_engine.py
tests/: test_audit_regressions.py  test_click_engine.py  test_coordinate_picker.py  test_exceptions.py  test_safety.py  test_settings_manager.py  test_settings_migration.py  test_soak.py
tools/: refresh_lock.py
