[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-autoclicker"
version = "1.0.0"
description = "Professional Windows autoclicker with advanced automation capabilities and comprehensive safety features"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "TMHSDigital", email = "info@tmhsdigital.com"}
]
keywords = [
    "autoclicker", "automation", "windows", "gui", "python",
    "productivity", "mouse", "clicking", "safety", "professional"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Desktop Environment",
    "Topic :: System :: Monitoring",
    "Natural Language :: English"
]
requires-python = ">=3.8"
dependencies = [
    "pyautogui>=0.9.53",
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "pywin32>=227",
    "Pillow>=9.0.0",
    "pystray>=0.19.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]
build = [
    "pyinstaller>=5.0.0",
    "setuptools>=61.0",
    "wheel>=0.37.0"
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0"
]

[project.urls]
"Homepage" = "https://github.com/TMHSDigital/autoclicker"
"Repository" = "https://github.com/TMHSDigital/autoclicker"
"Bug Reports" = "https://github.com/TMHSDigital/autoclicker/issues"
"Source" = "https://github.com/TMHSDigital/autoclicker"

[project.scripts]
autoclicker = "autoclicker:main"

[tool.setuptools]
packages = ["."]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"" = ["*.ico", "*.png", "requirements.txt"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short"
testpaths = [
    ".",
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "autoclicker_env/*",
    "*/__pycache__/*",
    "*/.git/*",
    "*/build/*",
    "*/dist/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | autoclicker_env
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["autoclicker"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyautogui.*",
    "keyboard.*",
    "mouse.*",
    "pystray.*",
    "PIL.*",
    "win32.*"
]
ignore_missing_imports = true
