[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "windows-autoclicker"
version = "1.2.0"
description = "Professional Windows autoclicker with advanced automation capabilities and comprehensive safety features"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "TM Hospitality Strategies", email = "info@tmhsdigital.com"}
]
keywords = [
    "autoclicker", "automation", "windows", "gui", "python",
    "productivity", "mouse", "clicking", "safety", "professional"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Desktop Environment",
    "Topic :: System :: Monitoring",
    "Natural Language :: English"
]
requires-python = ">=3.10"
dependencies = [
    "pyautogui>=0.9.53",
    "keyboard>=0.13.5",
    "mouse>=0.7.1",
    "pywin32>=227",
    "Pillow>=9.0.0",
    "pystray>=0.19.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
build = [
    "pyinstaller>=5.0.0",
    "setuptools>=61.0",
    "wheel>=0.37.0"
]

[project.urls]
"Homepage" = "https://github.com/TMHSDigital/autoclicker"
"Repository" = "https://github.com/TMHSDigital/autoclicker"
"Bug Reports" = "https://github.com/TMHSDigital/autoclicker/issues"
"Source" = "https://github.com/TMHSDigital/autoclicker"

[project.scripts]
autoclicker = "autoclicker.main:main"

[tool.setuptools.packages.find]
include = ["autoclicker*"]

[tool.setuptools.package-data]
autoclicker = ["*.ico", "*.png"]

[tool.pytest.ini_options]
minversion = "7.0"
# Project-wide cov floor rises in phase 8; phase 3 gates click_engine at 60% (target 70%+).
addopts = "-ra -v --tb=short --cov=autoclicker.core.click_engine --cov-report=term-missing:skip-covered --cov-fail-under=60"
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "autoclicker_env/*",
    "*/__pycache__/*",
    "*/.git/*",
    "*/build/*",
    "*/dist/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"autoclicker/**" = ["E501", "SIM102", "SIM105", "SIM108", "RUF003", "RUF012", "B904"]
"autoclicker.py" = ["E501"]
"tests/**" = ["SIM115", "E501"]
"create_icon.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "autoclicker.gui.*"
disable_error_code = ["attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = "autoclicker.core.click_engine"
disable_error_code = ["operator", "assignment", "call-overload", "attr-defined"]

[[tool.mypy.overrides]]
module = "autoclicker.core.safety"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "pyautogui.*",
    "keyboard.*",
    "mouse.*",
    "pystray.*",
    "PIL.*",
    "win32.*"
]
ignore_missing_imports = true
